# sixfiveohtwo

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml  format.yml  test.yml
docs/: addressing.html  algorithms.html  architecture.html  index.html  instructions.html  links.html  reference.html  registers.html
src/: device.rs  device_mapper.rs  lib.rs  main.rs  memory.rs  opcodes.rs  processor.rs  registers.rs  test_opcodes.rs  tests.rs
