[package]
name = "sixfiveohtwo"
version = "0.0.1"
edition = "2021"
authors = ["Stan Rochat"]
description = "A 6502 emulator (WIP)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3" # Docs: https://docs.rs/bitflags/latest/bitflags/
